login code added

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -23,23 +23,36 @@
                                         </div>
                                     </div>
                                 </div>
-                                <form action="#">
+                                <form  [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                                     <div class="form-group">
                                         <label class="form-label" for="name">Name</label>
                                         <div class="form-control-wrap">
-                                            <input type="text" class="form-control form-control-lg" id="name" placeholder="Enter your name">
+                                            <input type="text" formControlName="name" class="form-control form-control-lg" id="name" placeholder="Enter your name">
+                                            @if (registerForm.get('name')?.errors && registerForm.get('name')?.touched) {
+                                                <span class="text-secondary2" *ngIf="registerForm.get('name')?.errors?.['required']">Name is required</span>
+                                                <span class="text-secondary2" *ngIf="registerForm.get('name')?.errors?.['minlength']">Name must be at least 2 character</span>
+                                                }
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="form-label" for="email">Email or Username</label>
+                                        <label class="form-label" for="email">Email</label>
                                         <div class="form-control-wrap">
-                                            <input type="text" class="form-control form-control-lg" id="email" placeholder="Enter your email address or username">
+                                            <input type="text" formControlName="email" class="form-control form-control-lg" id="email" placeholder="Enter your email address or username">
+                                            @if (registerForm.get('email')?.errors && registerForm.get('email')?.touched) {
+                                                <span class="text-secondary2" *ngIf="registerForm.get('email')?.errors?.['required']">Email is required</span>
+                                                <span class="text-secondary2" *ngIf="registerForm.get('email')?.errors?.['email']">Email is not valid</span>
+                                                <span class="text-secondary2" *ngIf="registerForm.get('email')?.errors?.['minlength']">Email must be at least 2 character</span>
+                                                }
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="form-label" for="email">Mobile Number</label>
                                         <div class="form-control-wrap">
-                                            <input type="text" class="form-control form-control-lg" id="email" placeholder="Enter your email address or username">
+                                            <input type="text" formControlName="mobile_number" class="form-control form-control-lg" id="email" placeholder="Enter your mobile number"  pattern="[0-9]*" (input)="validateInput($event)" maxlength="10">
+                                            @if (registerForm.get('mobile_number')?.errors && registerForm.get('mobile_number')?.touched) {
+                                                <span class="text-secondary2" *ngIf="registerForm.get('mobile_number')?.errors?.['required']">Mobile Number is required</span>
+                                                <span class="text-secondary2" *ngIf="registerForm.get('mobile_number')?.errors?.['minlength']">Mobile number must be 10 digit</span>
+                                                }
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -49,7 +62,11 @@
                                                 <em class="passcode-icon icon-show icon ni ni-eye"></em>
                                                 <em class="passcode-icon icon-hide icon ni ni-eye-off"></em>
                                             </a>
-                                            <input type="password" class="form-control form-control-lg" id="password" placeholder="Enter your passcode">
+                                            <input type="password" formControlName="password" class="form-control form-control-lg" id="password" placeholder="Enter your passcode">
+                                            @if (registerForm.get('password')?.errors && registerForm.get('password')?.touched) {
+                                                <span class="text-secondary2" *ngIf="registerForm.get('password')?.errors?.['required']">Password is required</span>
+                                                <span class="text-secondary2" *ngIf="registerForm.get('password')?.errors?.['minlength']">Password must be at least 4 character</span>
+                                                }
                                         </div>
                                     </div>
                                     <!-- <div class="form-group">
@@ -59,7 +76,7 @@
                                         </div>
                                     </div> -->
                                     <div class="form-group">
-                                        <button class="btn btn-lg btn-primary btn-block">Register</button>
+                                        <button type="submit" class="btn btn-lg btn-primary btn-block">Register</button>
                                     </div>
                                 </form>
                                 <div class="form-note-s2 text-center pt-4"> Already have an account? <a href="" style="color: #0119FF;"><strong>Sign in instead</strong></a>
