--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -23,13 +23,18 @@
                                         </div>
                                     </div>
                                 </div>
-                                <form action="#">
+                                <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                                     <div class="form-group">
                                         <div class="form-label-group">
-                                            <label class="form-label" for="default-01">Email or Username</label>
+                                            <label class="form-label" for="default-01">Email</label>
                                         </div>
                                         <div class="form-control-wrap">
-                                            <input type="text" class="form-control form-control-lg" id="default-01" placeholder="Enter your email address or username">
+                                            <input type="text" formControlName="email" class="form-control form-control-lg" id="default-01" placeholder="Enter your email address or username">
+                                            @if (loginForm.get('email')?.errors && loginForm.get('email')?.touched) {
+                                                <span class="text-secondary2" *ngIf="loginForm.get('email')?.errors?.['required']">Email is required</span>
+                                                <span class="text-secondary2" *ngIf="loginForm.get('email')?.errors?.['email']">Email is not valid</span>
+                                                <span class="text-secondary2" *ngIf="loginForm.get('email')?.errors?.['minlength']">Email must be at least 2 character</span>
+                                                }
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -42,13 +47,18 @@
                                                 <em class="passcode-icon icon-show icon ni ni-eye"></em>
                                                 <em class="passcode-icon icon-hide icon ni ni-eye-off"></em>
                                             </a>
-                                            <input type="password" class="form-control form-control-lg" id="password" placeholder="Enter your passcode">
+                                            <input type="password"  formControlName="password" class="form-control form-control-lg" id="password" placeholder="Enter your passcode">
+                                            @if (loginForm.get('password')?.errors && loginForm.get('password')?.touched) {
+                                                <span class="text-secondary2" *ngIf="loginForm.get('password')?.errors?.['required']">Password is required</span>
+                                                <span class="text-secondary2" *ngIf="loginForm.get('password')?.errors?.['minlength']">Password must be at least 4 character</span>
+                                                }
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <a href="superadmin/dashboard" class="btn btn-lg btn-primary btn-block">
+                                        <!-- <a href="superadmin/dashboard" class="btn btn-lg btn-primary btn-block">
                                             Sign in
-                                        </a>
+                                        </a> -->
+                                        <button type="submit" class="btn btn-lg btn-primary btn-block"> Sign in</button>
                                     </div>
                                 </form>
                                 <div class="form-note-s2 text-center pt-4"> New on our platform? <a href="register" style="color: #0119FF;">Create an account</a>
