toaster code modified

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -138,7 +138,19 @@
 </body>
 
 
-
+<!-- toaster -->
+<div class="toast-container position-fixed top-0 end-0 p-3">
+    <div id="toaster" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-header">
+        <strong class="me-auto text-primary">{{toastTitle ? toastTitle:''}}</strong>
+        <!-- <small>11 mins ago</small> -->
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+      <div class="toast-body">
+       {{toastMessage ? toastMessage : ''}}
+      </div>
+    </div>
+</div>
   
   
   
