model code added

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -46,7 +46,7 @@
                             </div>
                             <div class="dropdown-inner">
                                 <ul class="link-list" >
-                                    <li><a (click)="open_sign_out_model(sign_out_model)"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
+                                    <li><a (click)="open_sign_out_model()"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -58,17 +58,26 @@
 
 <!-- main header @e -->
 
-<ng-template #sign_out_model let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title">Sign Out</h4>
-      <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+
+
+  
+<!-- Modal Content -->
+<div class="modal fade" tabindex="-1" id="modalDefault">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <a href="#" class="close" data-bs-dismiss="modal" aria-label="Close">
+                <em class="icon ni ni-cross"></em>
+            </a>
+            <div class="modal-header">
+                <h5 class="modal-title">Modal Title</h5>
+            </div>
+            <div class="modal-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem similique earum necessitatibus nesciunt! Quia id expedita asperiores voluptatem odit quis fugit sapiente assumenda sunt voluptatibus atque facere autem, omnis explicabo.</p>
+            </div>
+            <div class="modal-footer bg-light">
+                <span class="sub-text">Modal Footer Text</span>
+            </div>
+        </div>
     </div>
-    <div class="modal-body">
-      <p>Are you sure you want to proceed?</p>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-primary" (click)="sign_out()">Yes</button>
-      <button type="button" class="btn btn-secondary" (click)="modal.dismiss('No')">No</button>
-    </div>
-  </ng-template>
+</div>
   
